--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,6 +6,11 @@
     <title>My Library</title>
 </head>
 <body>
+    <%- include('../partials/header') %>
+    <%- include('../partials/errorMessage') %>
+    <hr>
+    <br>
     <%- body %>
+    
 </body>
 </html>
